# swagger.json
@@ -1,256 +1,398 @@
 {
-    "swagger": "2.0",
-    "info": {
-      "title": "User API",
-      "description": "API documentation for the User API",
-      "version": "1.0.0"
+  "swagger": "2.0",
+  "info": {
+    "title": "Authentication API",
+    "description": "API documentation for the Authentication API",
+    "version": "1.0.0"
+  },
+  "host": "localhost:5000",
+  "basePath": "/api/user",
+  "schemes": ["http"],
+  "tags": [
+    {
+      "name": "Authentication",
+      "description": "Endpoints for user authentication"
     },
-    "host": "localhost:5000",
-    "basePath": "/",
-    "schemes": ["http"],
-    "tags": [
-      {
-        "name": "User",
-        "description": "Endpoints for managing users"
-      }
-    ],
-    "paths": {
-      "/api/user/register": {
-        "post": {
-          "tags": ["User"],
-          "summary": "Create a new user",
-          "parameters": [
-            {
-              "name": "body",
-              "in": "body",
-              "description": "User object",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/CreateUser"
-              }
-            }
-          ],
-          "responses": {
-            "201": {
-              "description": "User created successfully"
-            },
-            "400": {
-              "description": "Invalid input"
-            },
-            "500": {
-              "description": "Server error"
+    {
+      "name": "Users",
+      "description": "Endpoints for managing user data"
+    }
+  ],
+  "securityDefinitions": {
+    "jwt": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
+  "paths": {
+    "/register": {
+      "post": {
+        "tags": ["Authentication"],
+        "summary": "Create a new user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "User object",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
             }
           }
-        }
-      },
-      "/api/user/all-users": {
-        "get": {
-          "tags": ["User"],
-          "summary": "Get all users",
-          "responses": {
-            "200": {
-              "description": "Success"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        }
-      },
-      "/api/user/{id}": {
-        "get": {
-          "tags": ["User"],
-          "summary": "Get a single user by ID",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID of the user",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "Success",
-              "schema": {
-                "$ref": "#/definitions/User"
-              }
-            },
-            "404": {
-              "description": "User not found"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        },
-        "put": {
-          "tags": ["User"],
-          "summary": "Update a user by ID",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID of the user",
-              "required": true,
-              "type": "string"
-            },
-            {
-              "name": "body",
-              "in": "body",
-              "description": "Updated user object",
-              "required": true,
-              "schema": {
-                "$ref": "#/definitions/UpdateUser"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "User updated successfully"
-            },
-            "400": {
-              "description": "Invalid input"
-            },
-            "404": {
-              "description": "User not found"
-            },
-            "500": {
-              "description": "Server error"
-            }
-          }
-        },
-        "delete": {
-          "tags": ["User"],
-          "summary": "Delete a user by ID",
-          "parameters": [
-            {
-              "name": "id",
-              "in": "path",
-              "description": "ID of the user",
-              "required": true,
-              "type": "string"
-            }
-          ],
-          "responses": {
-            "204": {
-              "description": "User deleted successfully"
-            },
-            "404": {
-              "description": "User not found"
-            },
-            "500": {
-              "description": "Server error"
-            }
+        ],
+        "responses": {
+          "200": {
+            "description": "User registered successfully"
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server error"
           }
         }
       }
     },
-    "definitions": {
-      "User": {
-        "type": "object",
-        "properties": {
-          "firstname": {
-            "type": "string"
-          },
-          "lastname": {
-            "type": "string"
-          },
-          "dateOfBirth": {
-            "type": "string"
-          },
-          "department": {
-            "type": "string"
-          },
-          "salary": {
-            "type": "number"
-          },
-          "email": {
-            "type": "string"
-          },
-          "hireDate": {
-            "type": "string"
-          },
-          "jobTitle": {
-            "type": "string"
-          },
-          "mobile": {
-            "type": "string"
-          },
-          "role": {
-            "type": "string"
+    "/login": {
+      "post": {
+        "tags": ["Authentication"],
+        "summary": "User login",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "User login credentials",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Credentials"
+            }
           }
-        }
-      },
-      "CreateUser": {
-        "type": "object",
-        "properties": {
-          "firstname": {
-            "type": "string"
+        ],
+        "responses": {
+          "200": {
+            "description": "User logged in successfully"
           },
-          "lastname": {
-            "type": "string"
+          "401": {
+            "description": "Unauthorized"
           },
-          "dateOfBirth": {
-            "type": "string"
-          },
-          "department": {
-            "type": "string"
-          },
-          "salary": {
-            "type": "number"
-          },
-          "email": {
-            "type": "string"
-          },
-          "hireDate": {
-            "type": "string"
-          },
-          "jobTitle": {
-            "type": "string"
-          },
-          "mobile": {
-            "type": "string"
-          },
-          "role": {
-            "type": "string"
+          "500": {
+            "description": "Server error"
           }
         },
-        "required": ["firstname", "lastname", "dateOfBirth", "department", "salary", "email", "hireDate", "jobTitle", "mobile"]
-      },
-      "UpdateUser": {
-        "type": "object",
-        "properties": {
-          "firstname": {
-            "type": "string"
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/admin-login": {
+      "post": {
+        "tags": ["Authentication"],
+        "summary": "Admin login",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Admin login credentials",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Credentials"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Admin user logged in successfully"
           },
-          "lastname": {
-            "type": "string"
+          "401": {
+            "description": "Unauthorized"
           },
-          "dateOfBirth": {
-            "type": "string"
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/all-users": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get all users",
+        "responses": {
+          "200": {
+            "description": "User data retrieved successfully"
           },
-          "department": {
-            "type": "string"
+          "401": {
+            "description": "Unauthorized"
           },
-          "salary": {
-            "type": "number"
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/refresh": {
+      "get": {
+        "tags": ["Authentication"],
+        "summary": "Refresh token",
+        "responses": {
+          "200": {
+            "description": "Token refreshed successfully"
           },
-          "email": {
-            "type": "string"
+          "401": {
+            "description": "Unauthorized"
           },
-          "hireDate": {
-            "type": "string"
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/logout": {
+      "get": {
+        "tags": ["Authentication"],
+        "summary": "User logout",
+        "responses": {
+          "204": {
+            "description": "User logged out successfully"
           },
-          "jobTitle": {
-            "type": "string"
+          "401": {
+            "description": "Unauthorized"
           },
-          "mobile": {
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/{id}": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get a user by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "User ID",
+            "required": true,
             "type": "string"
           }
+        ],
+        "responses": {
+          "200": {
+            "description": "User data retrieved successfully",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      },
+      "delete": {
+        "tags": ["Users"],
+        "summary": "Delete a user by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "User ID",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "User deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/edit-user": {
+      "put": {
+        "tags": ["Users"],
+        "summary": "Edit a user's profile",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Updated user information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User profile updated successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    },
+    "/save-address": {
+      "put": {
+        "tags": ["Users"],
+        "summary": "Save user's address",
+        "parameters": [
+          {
+            "name": "address",
+            "in": "body",
+            "description": "User's address",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Address"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "User's address saved successfully"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        },
+        "security": [
+          {
+            "jwt": []
+          }
+        ]
+      }
+    }
+  },
+  "definitions": {
+    "User": {
+      "type": "object",
+      "properties": {
+        "firstname": {
+          "type": "string"
+        },
+        "lastname": {
+          "type": "string"
+        },
+        "dateOfBirth": {
+          "type": "string"
+        },
+        "department": {
+          "type": "string"
+        },
+        "salary": {
+          "type": "number"
+        },
+        "email": {
+          "type": "string"
+        },
+        "hireDate": {
+          "type": "string"
+        },
+        "jobTitle": {
+          "type": "string"
+        },
+        "mobile": {
+          "type": "string"
+        },
+        
+        "password":{
+          "type":"string"
+        },
+        "role":{ 
+        "type":"string",
+        "default": "employee"
+        }
+      }
+    },
+    "Address": {
+      "type": "object",
+      "properties": {
+        "address": {
+          "type": "string"
+        }
+      }
+    },
+    "Credentials": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
         }
       }
     }
   }
-  
+}
